--- a/hobby.html
+++ b/hobby.html
@@ -147,7 +147,7 @@
         </p>
         
         <!-- Image related to astronomy -->
-        <img src="\https://steltercarter.github.io/IS201/assets/img/Astronomer.webp" alt="Astronomer looking into a telescope">
+        <img src="https://steltercarter.github.io/IS201/assets/img/Astronomer.webp" alt="Astronomer looking into a telescope">
         <p>
            And here's a YouTube video if you're curious about getting into the astronomy hobby for yourself!
         </p>
